--- a/examples/debug-vue/index.html
+++ b/examples/debug-vue/index.html
@@ -7,15 +7,14 @@
 </head>
 <body>
     <div id="app">
-        hello vue
+        {{msg}}
     </div>
     <script src="../../dist/vue.js"></script>
     <script>
         const vm = new Vue({
             el:'#app',
-            template:'<h2>vue项目</h2>',
-            render(h){
-                return h('h2','vue项目2')
+            data:{
+                msg:'hello vue'
             }
         })
     </script>
