--- a/examples/debug-vue/index.html
+++ b/examples/debug-vue/index.html
@@ -15,6 +15,9 @@
             el:'#app',
             data:{
                 msg:'hello vue'
+            },
+            created(){
+                console.log(this)
             }
         })
     </script>
